@@ -129,6 +129,7 @@ public class PackageTest extends TestCase
 		suite.addTestSuite( BadQueryTest.class );
 		suite.addTest( com.exedio.cope.pattern.PackageTest.suite() );
 		suite.addTest( com.exedio.cope.util.PackageTest.suite() );
+		suite.addTest( com.exedio.cope.misc.PackageTest.suite() );
 		
 		return suite;
 	}
