@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* move TransactionSlicer to package com.exedio.cope.misc
+	deprecated version is provided
 * rename Pattern.initialize to onMount
 	deprecated version is provided
 * add @Computed
